# snr

./: CMakeLists.txt  Makefile  README.md
analysis/: analysis.py  config.py.orig  export.py  manage.py  snr.py
debian/: .gitignore  README.Debian  changelog  control  copyright  rules  watch
include/: SNR.hpp  configuration.hpp
src/: SNR.cpp  SNRTest.cpp  SNRTuning.cpp
